--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "prosemirror-commands": "^1.7.1",
     "prosemirror-history": "^1.4.1",
+    "prosemirror-inputrules": "^1.4.0",
     "prosemirror-keymap": "^1.2.3",
     "prosemirror-model": "^1.25.3",
     "prosemirror-schema-basic": "^1.2.4",
