--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -8,13 +8,15 @@
     "sourceMap": true,
 
     // Stricter for production builds
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
 
     // Paths for built packages (prioritize dist over src)
     "paths": {
+      "@autoartifacts/*": ["packages/*/src", "packages/*/dist"],
+      "@autoartifacts/pm/*": ["packages/pm/dist/*", "packages/pm/src/*"],
       "@autoartifacts/core": ["packages/core/dist", "packages/core/src"],
       "@autoartifacts/react": ["packages/react/dist", "packages/react/src"],
       "@autoartifacts/extensions/*": [
