--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -5,6 +5,7 @@ packages:
   - "packages/markdown"
   - "packages/static-renderer"
   - "packages/react"
+  - "packages/extensions"
   - "packages/extension-*"
   # Exclude packages that depend on missing external dependencies
   - "!packages/extension-drag-handle" # needs extension-collaboration + y-tiptap
