--- a/packages/extension-kit/package.json
+++ b/packages/extension-kit/package.json
@@ -60,6 +60,7 @@
     "@autoartifacts/extension-slide": "workspace:*",
     "@autoartifacts/extension-select-within-slide": "workspace:*",
     "@autoartifacts/extension-strike": "workspace:*",
+    "@autoartifacts/markdown": "workspace:*",
     "@autoartifacts/extension-subscript": "workspace:*",
     "@autoartifacts/extension-superscript": "workspace:*",
     "@autoartifacts/extension-table": "workspace:*",
