--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -9,8 +9,8 @@ packages:
   - "packages/extensions"
   - "packages/extension-*"
   # Exclude packages that depend on missing external dependencies
-  - "!packages/extension-drag-handle" # needs extension-collaboration + y-tiptap
+  - "!packages/extension-drag-handle" # needs extension-collaboration 
   - "!packages/extension-drag-handle-vue-2" # needs vue-2
   - "!packages/extension-drag-handle-vue-3" # needs vue-3
-  - "!packages/extension-drag-handle-react" # might need React-specific tiptap packages
+  - "!packages/extension-drag-handle-react" 
   - "!packages/extension-emoji" # needs @autoartifacts/suggestion package
