--- a/packages/extension-column/package.json
+++ b/packages/extension-column/package.json
@@ -1,6 +1,12 @@
 {
   "name": "@autoartifacts/extension-column",
-  "version": "0.0.1",
+  "version": "0.1.0",
+  "author": "keivanmojmali",
+  "keywords": [
+    "autoartifacts",
+    "autoartifacts extension",
+    "column"
+  ],
   "main": "./dist/index.cjs",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -18,9 +24,13 @@
   "scripts": {
     "build": "tsup"
   },
+  "peerDependencies": {
+    "@autoartifacts/core": "^0.1.0",
+    "@autoartifacts/pm": "^0.1.0"
+  },
   "dependencies": {
-    "@autoartifacts/core": "workspace:*",
-    "@autoartifacts/pm": "workspace:*"
+    "@autoartifacts/core": "^0.1.0",
+    "@autoartifacts/pm": "^0.1.0"
   },
   "devDependencies": {
     "tsup": "^8.5.0",
