--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "autoartifacts-monorepo",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "AutoArtifacts monorepo - ProseMirror-based slide editor",
   "private": true,
   "scripts": {
@@ -8,7 +8,7 @@
     "dev": "pnpm --filter '@autoartifacts/*' --recursive run dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "keivanmojmali",
   "license": "ISC",
   "devDependencies": {
     "tsup": "^8.0.0",
