--- a/packages/extension-file-handler/package.json
+++ b/packages/extension-file-handler/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@autoartifacts/extension-file-handler",
   "description": "file handler extension for autoartifacts",
-  "version": "3.6.7",
+  "version": "0.1.0",
   "keywords": [
     "autoartifacts",
     "autoartifacts extension"
@@ -25,6 +25,7 @@
     "src",
     "dist"
   ],
+  "author": "keivanmojmali",
   "devDependencies": {
     "@autoartifacts/core": "workspace:^",
     "@autoartifacts/extension-text-style": "workspace:^",
