--- a/packages/extension-ordered-list/package.json
+++ b/packages/extension-ordered-list/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@autoartifacts/extension-ordered-list",
   "description": "ordered list extension for autoartifacts",
-  "version": "3.6.7",
+  "version": "0.1.0",
   "keywords": [
     "autoartifacts",
     "autoartifacts extension"
@@ -18,6 +18,7 @@
       "require": "./dist/index.cjs"
     }
   },
+  "author": "keivanmojmali",
   "main": "dist/index.cjs",
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
