--- a/packages/extension-select-within-slide/package.json
+++ b/packages/extension-select-within-slide/package.json
@@ -4,11 +4,11 @@
   "description": "Override Mod-A so selection grows until the slide, never the full doc.",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
-  "author": "AutoArtifacts",
+  "author": "keivanmojmali",
   "license": "MIT",
   "dependencies": {
-    "@autoartifacts/core": "workspace:*",
-    "@autoartifacts/pm": "workspace:*"
+    "@autoartifacts/core": "*",
+    "@autoartifacts/pm": "*"
   },
   "peerDependencies": {
     "@autoartifacts/core": "*",
