--- a/packages/markdown/package.json
+++ b/packages/markdown/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@autoartifacts/markdown",
   "description": "markdown parser and serializer for autoartifacts",
-  "version": "3.0.0-beta.0",
+  "version": "0.1.0",
   "keywords": [
     "autoartifacts",
     "autoartifacts utility"
@@ -47,5 +47,6 @@
   "scripts": {
     "build": "tsup",
     "lint": "prettier ./src/ --check && eslint --cache --quiet --no-error-on-unmatched-pattern ./src/"
-  }
+  },
+  "author": "keivanmojmali"
 }
