--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -56,10 +56,10 @@
   "peerDependencies": {
     "@autoartifacts/core": "workspace:^",
     "@autoartifacts/pm": "workspace:^",
-    "react": "^17.0.0 || ^18.0.0 || ^19.0.0",
-    "react-dom": "^17.0.0 || ^18.0.0 || ^19.0.0",
     "@types/react": "^17.0.0 || ^18.0.0 || ^19.0.0",
-    "@types/react-dom": "^17.0.0 || ^18.0.0 || ^19.0.0"
+    "@types/react-dom": "^17.0.0 || ^18.0.0 || ^19.0.0",
+    "react": "^17.0.0 || ^18.0.0 || ^19.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0 || ^19.0.0"
   },
   "repository": {
     "type": "git",
@@ -70,5 +70,6 @@
   "scripts": {
     "build": "tsup",
     "lint": "prettier ./src/ --check && eslint --cache --quiet --no-error-on-unmatched-pattern ./src/"
-  }
+  },
+  "author": "keivanmojmali"
 }
