add preset bubble menu

--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "devDependencies": {
     "tsup": "^8.0.0",
     "typescript": "^5.0.0"
+  },
+  "dependencies": {
+    "@blockslides/extension-bubble-menu-preset": "^0.1.0"
   }
 }
