--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "author": "keivanmojmali",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^25.0.3",
     "tsup": "^8.0.0",
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "@blockslides/extension-bubble-menu-preset": "^0.1.0"
+    "@blockslides/extension-bubble-menu-preset": "^0.1.0",
+    "caniuse-lite": "^1.0.30001763"
   }
 }
