--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -37,6 +37,8 @@
     "dist"
   ],
   "dependencies": {
+    "@blockslides/ai-context": "workspace:^",
+    "@blockslides/extension-kit": "workspace:^",
     "@types/use-sync-external-store": "^0.0.6",
     "fast-deep-equal": "^3.1.3",
     "use-sync-external-store": "^1.4.0"
