--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@types/node": "^25.0.3",
     "tsup": "^8.0.0",
     "typescript": "^5.0.0",
-    "vitepress": "^1.6.4"
+    "vitepress": "^1.6.4",
+    "vue": "^3.5.27"
   },
   "dependencies": {
     "@blockslides/extension-bubble-menu-preset": "^0.3.0",
