--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blockslides/core",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "description": "Core ProseMirror-based slide editor with essential plugins",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -35,15 +35,7 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
-    "@blockslides/pm": "workspace:*",
-    "prosemirror-commands": "^1.7.1",
-    "prosemirror-history": "^1.4.1",
-    "prosemirror-inputrules": "^1.4.0",
-    "prosemirror-keymap": "^1.2.3",
-    "prosemirror-model": "^1.25.3",
-    "prosemirror-schema-basic": "^1.2.4",
-    "prosemirror-state": "^1.4.3",
-    "prosemirror-view": "^1.41.2"
+    "@blockslides/pm": "workspace:*"
   },
   "devDependencies": {
     "@types/jest": "^30.0.0",
