--- a/packages/vue-3/package.json
+++ b/packages/vue-3/package.json
@@ -40,6 +40,9 @@
     "@blockslides/core": "workspace:^",
     "@blockslides/pm": "workspace:^",
     "@floating-ui/dom": "^1.0.0",
+    "@vitejs/plugin-vue": "^5.0.0",
+    "vite": "^5.0.0",
+    "vite-plugin-dts": "^3.0.0",
     "vue": "^3.5.13"
   },
   "optionalDependencies": {
@@ -59,7 +62,7 @@
   },
   "sideEffects": false,
   "scripts": {
-    "build": "tsup",
+    "build": "vite build",
     "lint": "prettier ./src/ --check && eslint --cache --quiet --no-error-on-unmatched-pattern ./src/"
   },
   "author": "keivanmojmali"
