--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
   "devDependencies": {
     "@changesets/cli": "^2.29.8",
     "@types/node": "^25.0.3",
+    "@vitejs/plugin-vue": "^5.0.0",
     "tsup": "^8.0.0",
     "typescript": "^5.0.0",
+    "vite": "^5.0.0",
+    "vite-plugin-dts": "^3.0.0",
     "vitepress": "^1.6.4",
     "vue": "^3.5.27"
   },
