--- a/packages/vue-3/package.json
+++ b/packages/vue-3/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@blockslides/vue-3",
   "description": "Vue 3 components for blockslides",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "homepage": "https://github.com/keivanmojmali/blockslides",
   "keywords": [
     "blockslides",
@@ -36,6 +36,10 @@
     "src",
     "dist"
   ],
+  "dependencies": {
+    "@blockslides/ai-context": "workspace:^",
+    "@blockslides/extension-kit": "workspace:^"
+  },
   "devDependencies": {
     "@blockslides/core": "workspace:^",
     "@blockslides/pm": "workspace:^",
