adding some packages to workspace

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,13 +1,16 @@
 packages:
   - "demo"
   - "vue-demo"
+  - "delete-me"
   - "packages/core"
   - "packages/pm"
   - "packages/html"
   - "packages/markdown"
   - "packages/static-renderer"
   - "packages/react"
+  - "packages/react-prebuilts"
   - "packages/vue-3"
+  - "packages/vue-3-prebuilts"
   - "packages/extensions"
   - "packages/ai-context"
   - "packages/extension-*"
