update packages to be type modules that were missing it

--- a/packages/extension-column/package.json
+++ b/packages/extension-column/package.json
@@ -1,22 +1,27 @@
 {
   "name": "@blockslides/extension-column",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "author": "keivanmojmali",
+  "license": "MIT",
+  "type": "module",
   "keywords": [
     "blockslides",
     "blockslides extension",
     "column"
   ],
+  "exports": {
+    ".": {
+      "types": {
+        "import": "./dist/index.d.ts",
+        "require": "./dist/index.d.cts"
+      },
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
+    }
+  },
   "main": "./dist/index.cjs",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
-  "exports": {
-    ".": {
-      "import": "./dist/index.js",
-      "require": "./dist/index.cjs",
-      "types": "./dist/index.d.ts"
-    }
-  },
   "files": [
     "dist",
     "src"
