--- a/packages/extension-column-group/package.json
+++ b/packages/extension-column-group/package.json
@@ -1,16 +1,22 @@
 {
   "name": "@blockslides/extension-column-group",
-  "version": "0.2.1",
+  "version": "0.2.2",
+  "author": "keivanmojmali",
+  "license": "MIT",
+  "type": "module",
+  "exports": {
+    ".": {
+      "types": {
+        "import": "./dist/index.d.ts",
+        "require": "./dist/index.d.cts"
+      },
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
+    }
+  },
   "main": "./dist/index.cjs",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
-  "exports": {
-    ".": {
-      "import": "./dist/index.js",
-      "require": "./dist/index.cjs",
-      "types": "./dist/index.d.ts"
-    }
-  },
   "files": [
     "dist",
     "src"
@@ -29,6 +35,5 @@
   "devDependencies": {
     "tsup": "^8.5.0",
     "typescript": "^5.9.3"
-  },
-  "author": "keivanmojmali"
+  }
 }
