--- a/packages/extension-select-within-slide/package.json
+++ b/packages/extension-select-within-slide/package.json
@@ -1,11 +1,23 @@
 {
   "name": "@blockslides/extension-select-within-slide",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Override Mod-A so selection grows until the slide, never the full doc.",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
   "author": "keivanmojmali",
   "license": "MIT",
+  "type": "module",
+  "exports": {
+    ".": {
+      "types": {
+        "import": "./dist/index.d.ts",
+        "require": "./dist/index.d.cts"
+      },
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
+    }
+  },
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "dependencies": {
     "@blockslides/core": "workspace:^",
     "@blockslides/pm": "workspace:^"
